2012-01-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/scan.boot: Disable special handling of
	spaces after escape.

2012-01-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lisp/fricas-lisp.lisp, src/lisp/fricas-package.lisp,
	src/boot/btincl2.boot, src/boot/initial-env.lisp,
	src/boot/ptyout.boot, src/interp/int-top.boot,
	src/interp/vmlisp.lisp: Improve file handling.
	src/boot/compiled/* : Update.

2012-01-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/special2.spad.pamphlet: Add double precision
	elliptic integrals.
	src/algebra/sf.spad.pamphlet: Use them.
	src/algebra/exposed.lsp.pamphlet: Expose them.
	src/algebra/Makefile.in: Adjust.

2012-01-06  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/interp/ax.boot: fix aldor-interface

2012-01-06  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/aldor/Makefile.in, src/aldor/initlist.as: enable Matrix over
	SemiRng+AbelianMonoid

2012-01-06  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/algebra/jet.spad.pamphlet: Remove unnecessary variable
	name from polynomial type.

2012-01-06  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/algebra/jet.spad.pamphlet: Fix dependency order of
	arguments.

2012-01-06  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/interp/interop.boot: fix regression in depsys --> bootsys
	switch

2012-01-06  Ralf Hemmecke  <ralf@hemmecke.de>

	* configure.ac, src/aldor/Makefile.in: enable configuration of
	local aldor source files

2012-01-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/daase.lisp, src/interp/fname.lisp,
	src/interp/Makefile.in, src/interp/nlib.lisp,
	 src/interp/patches.lisp, src/interp/sys-pkg.lisp,
	src/interp/vmlisp.lisp, src/lisp/fricas-package.lisp:
	Remove VMLISP package.

2012-01-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/g-util.boot, src/interp/macros.lisp,
	src/interp/nlib.lisp, src/interp/util.lisp,
	src/interp/vmlisp.lisp: Misc cleanups.

2012-01-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
