@@ -1,5 +1,14 @@
 2012-01-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/database.boot, src/interp/patches.lisp,
+	src/interp/msgdb.boot, src/interp/i-syscmd.boot,
+	src/interp/setq.lisp, src/interp/lisplib.boot,
+	src/interp/vmlisp.lisp, src/interp/clammed.boot,
+	src/lib/cfuns-c.c, src/lib/Makefile.in:
+	Misc cleanups.
+
+2012-01-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/interp/scan.boot: Disable special handling of
 	spaces after escape.
 
